  . stream_filter_remove() (Sara)
  . DomDocumentFragment::appendXML() (Christian)
  . SimpleXMLElement::registerXPathNamespace() (Christian)
  . mysqli::client_info property (Georg)
  . inet_pton() (Sara)
  . inet_ntop() (Sara)
  . fputcsv() (David Sklar)
  . posix_access() (Magnus)
  . htmlspecialchars_decode() (Ilia)
  . time_sleep_until() (Ilia)
  . math_std_dev() (Andrey)
- Added DomDocument::$recover property for parsing not well-formed
  XML Documents. (Christian)   
- Added Cursor support for MySQL 5.0.x in mysqli (Georg)
- Added proxy support to ftp wrapper via http. (Sara)
- Added MDTM support to ftp_url_stat. (Sara)
- Added zlib stream filter support. (Sara)
- Added bz2 stream filter support. (Sara)
- Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
- Added support of parameter=>value arrays to
  xsl_xsltprocessor_set_parameter(). (Tony)
- Fixed extension initialization to respect dependancies between extensions.
  (Wez)
- Fixed a problem with SPL iterators aggregating the innner iterator. (Marcus)
- Fixed bug with raw_post_data not getting set. (Brian)
- Fixed bug in mysql::client_version(). (Georg)
- Fixed ZTS destruction. (Marcus)
- Fixed bug #32833 (Invalid opcode). (Dmitry)
- Fixed bug #32491 (File upload error - unable to create a temporary file).
  (Uwe Schindler)
- Fixed bug #32429 (method_exists() always return TRUE if __call method
  exists). (Dmitry)
- Fixed bug #32427 (Interfaces are not allowed 'static' access modifier).
  (Dmitry)
- Fixed bug #32109 ($_POST is not populated in multithreaded environment).
  (Moriyoshi)
- Fixed bug #31478 (segfault with empty() / isset()). (Moriyoshi)
- Fixed bug #31033 (php:function(string, nodeset) with xsl:key crashes PHP).
  (Rob)
- Fixed bug #30578 (Output buffers flushed before calling __desctruct()
  functions). (Jani)
- Fixed bug #30407 (Strange behaviour of default arguments). (Dmitry)
- Fixed bug #29728 (Reflection API Feature: Default parameter value). (Marcus)